--- a/chat/package.json
+++ b/chat/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.2",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4"
   },
