--- a/chat/package.json
+++ b/chat/package.json
@@ -4,16 +4,19 @@
   "description": "api for system of the chat",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "NODE_ENV=development tsnd --respawn ./server/src/server.ts"
   },
   "author": "Fernando Coelho SAraiva",
   "license": "ISC",
   "dependencies": {
+    "@types/socket.io": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
+    "socket.io": "^4.5.1",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4"
   },
